--- a/styles/style.css
+++ b/styles/style.css
@@ -8,19 +8,27 @@ body{
 .btn-primary{
   border-radius: 5px;
   background: #FD6E0A;
+  border:0;
+  color:#fff;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 15px 35px;
 }
 nav{
   display: flex;
+  align-items: center;
+  justify-content:space-between;
+  text-transform: capitalize;
 }
 .nav-title{
   color:#181818;
   font-size: 45px;
   font-weight: 800;
-  text-transform: capitalize;
 }
 
 nav> ul{
   display: flex;
+  align-items: center;
 
 }
 nav li{
