--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,10 @@
+/* *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
 /* common shared style */
+
 body{
   font-family: 'Open Sans', sans-serif;
 }
@@ -13,12 +19,15 @@ body{
   font-size: 20px;
   font-weight: 700;
   padding: 15px 35px;
+  text-transform: capitalize;
 }
+/* nav related style  */
 nav{
   display: flex;
   align-items: center;
   justify-content:space-between;
   text-transform: capitalize;
+  margin: 0px 200px;
 }
 .nav-title{
   color:#181818;
@@ -38,4 +47,16 @@ nav li{
 nav a{
   text-decoration: none;
   color:#474747;
+}
+/* header related style  */
+.header{
+  background: #FFF8F3;
+}
+.banner{
+  padding: 30px 30px 30px 150px;
+  display: flex;
+  align-items: center;
+}
+.banner .profile-pic{
+  width: 500px;
 }
