--- a/styles/style.css
+++ b/styles/style.css
@@ -95,9 +95,71 @@ main{
   max-width: 1140px;
   margin: 0 auto;
 }
+main section{
+  margin-bottom: 130px;
+}
 /* about section styles */
 .about{
   padding: 130px;
   background:#FFF8F3;
   margin: 130px 0px;
+}
+.about-info-container{
+  display: flex;
+  justify-content: space-between;
+}
+.about-info{
+  text-align: center;
+}
+/* skills related styles  */
+#what-i-do-description{
+  padding: 30px 150px;
+}
+.skills-container{
+  display: flex;
+  gap:24px;
+}
+.skill{
+  padding: 30px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, .06);
+}
+.skill-desc{
+  color:#757575;
+}
+
+/* resume section styles  */
+.resume-column-title{
+  color:#474747;
+  font-size: 30px;
+  font-weight: 700;
+}
+.resume-container{
+  display: flex;
+  gap:50px;
+}
+.resume-item-title{
+  font-size: 25px;
+  color:#474747;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.resume-item-institute{
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.resume-item-description,.resume-item-institute{
+  color:#757575;
+}
+.resume-container hr{
+  margin: 30px;
+}
+.download-cv{
+  text-align: center;
+  margin-top: 50px;
 }
